--- a/css/invie02.css
+++ b/css/invie02.css
@@ -534,7 +534,8 @@ vide0 {
              */
     .menu {
         font-size: 35px; 
-        background: rgba(0, 6, 22, .8);
+        background: #34495e;
+        opacity: .7;
         position: absolute;
         left: -100%; /* saca todo el menu de la pantalla hacia la izquirda*/
         top: 0;
