--- a/css/invie02.css
+++ b/css/invie02.css
@@ -354,7 +354,7 @@ background: -ms-linear-gradient(45deg, rgba(241,111,92,1) 0%, rgba(241,111,92,1)
     z-index: 3;
 }
 
- /* vide0 {
+  vide0 {
     width: 100%;
  }
  
@@ -372,7 +372,7 @@ background: -ms-linear-gradient(45deg, rgba(241,111,92,1) 0%, rgba(241,111,92,1)
     width: 100%;
     height: 100%;
     
- }  */
+ }  
 
  @media screen and (max-width: 800px) {
      
