--- a/css/invie02.css
+++ b/css/invie02.css
@@ -256,7 +256,8 @@ background: -ms-linear-gradient(45deg, rgba(241,111,92,1) 0%, rgba(241,111,92,1)
 
 .guitarras h2 {
     font-size: 30px;
-    font-family: 'Droid Serif', serif
+    font-family: 'Droid Serif', serif;
+    text-align: center;
     
 }
 
@@ -354,13 +355,15 @@ background: -ms-linear-gradient(45deg, rgba(241,111,92,1) 0%, rgba(241,111,92,1)
     z-index: 3;
 }
 
-  vide0 {
+   vide0 {
     width: 100%;
- }
- 
+   }
+  
  .video-responsive-contenedor {
     position: relative;
     padding-top: 56.25%; 
+    padding: 0;
+     margin: 0;
  }
  
  .video-responsive-rsc {
@@ -371,6 +374,7 @@ background: -ms-linear-gradient(45deg, rgba(241,111,92,1) 0%, rgba(241,111,92,1)
     bottom: 0;
     width: 100%;
     height: 100%;
+    margin-bottom: 20px;
     
  }  
 
