--- a/css/invie02.css
+++ b/css/invie02.css
@@ -209,9 +209,10 @@ background: -ms-linear-gradient(45deg, rgba(241,111,92,1) 0%, rgba(241,111,92,1)
    /*  overflow: hidden; */
     border:  2px solid #34495e;
     padding: 10px ;
-    margin: 20px 20px 40px 20px;
+    margin: 100px 20px 40px 20px;
     border-radius:8px;
     padding-top: 35px;
+    
 }
 .derecha {
     float: right;
@@ -361,9 +362,8 @@ background: -ms-linear-gradient(45deg, rgba(241,111,92,1) 0%, rgba(241,111,92,1)
   
  .video-responsive-contenedor {
     position: relative;
-    padding-top: 56.25%; 
-    padding: 0;
-     margin: 0;
+    padding-top: 56.25%;
+    margin-top: 10px;
  }
  
  .video-responsive-rsc {
@@ -373,8 +373,7 @@ background: -ms-linear-gradient(45deg, rgba(241,111,92,1) 0%, rgba(241,111,92,1)
     top: 0;
     bottom: 0;
     width: 100%;
-    height: 100%;
-    margin-bottom: 20px;
+    height: 100%; 
     
  }  
 
@@ -391,6 +390,7 @@ background: -ms-linear-gradient(45deg, rgba(241,111,92,1) 0%, rgba(241,111,92,1)
      }
      .portada {
          height: auto; 
+         margin-bottom: 30px;
      }
      .portada .button {
          margin-bottom: 28px;
