--- a/css/invie02.css
+++ b/css/invie02.css
@@ -538,8 +538,7 @@ background: -ms-linear-gradient(45deg, rgba(241,111,92,1) 0%, rgba(241,111,92,1)
              */
     .menu {
         font-size: 35px; 
-        background: #010C2A;
-        
+        background: rgba(1, 11, 42, .8);
         position: absolute;
         left: -100%; /* saca todo el menu de la pantalla hacia la izquirda*/
         top: 0;
